--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ license = "MPL-2.0"
 description = "Encoding and Decoding for HackFSU's custom visual data encoding format."
 
 [dependencies]
+
+[dev-dependencies]
+quickcheck = "0.3"
